--- a/index.html
+++ b/index.html
@@ -70,24 +70,16 @@
         .then((json) => {
 
             //geojsonレイヤー作成
-            const polygon = L.geoJSON(json, {
+            const geojsonLayer = L.geoJSON(json, {
                 style: (feature) => ({
                     color: 'red',
                     stroke: false,
-
-                    //人口を面積で割った値でポリゴンの濃さを変える
-                    fillOpacity:
-                        feature.properties['人口'] /
-                        feature.properties['面積'] / 
-                        20000,
+                    fillOpacity: feature.properties['人口'] / feature.properties['面積'] / 20000
                 }),
-
-                
-            })
-                //ポップアップで人口を表示
-                L.geoJSON(json)
-                .bindPopup(
-                    (layer) => '人口:' + layer.feature.properties['人口']).addTo(map);
+                onEachFeature: (feature, layer) => {
+                    layer.bindPopup('人口:' + feature.properties['人口']);
+                }
+            }).addTo(map);
                 
 
                 //レイヤー一覧に追加
